feat: Implement Ambassador to be used as traffic router for canary deployments (#1025)
