# pkg/apis/rollouts/v1alpha1/types.go
@@ -241,6 +241,16 @@ type RolloutTrafficRouting struct {
 	ALB *ALBTrafficRouting `json:"alb,omitempty" protobuf:"bytes,3,opt,name=alb"`
 	// SMI holds TrafficSplit specific configuration to route traffic
 	SMI *SMITrafficRouting `json:"smi,omitempty" protobuf:"bytes,4,opt,name=smi"`
+	// Ambassador holds specific configuration to use Ambassador to route traffic
+	Ambassador *AmbassadorTrafficRouting `json:"ambassador,omitempty" protobuf:"bytes,5,opt,name=ambassador"`
+}
+
+// AmbassadorTrafficRouting defines the configuration required to use Ambassador as traffic
+// router
+type AmbassadorTrafficRouting struct {
+	// Mappings refer to the name of the Ambassador Mappings used to route traffic to the
+	// service
+	Mappings []string `json:"mappings" protobuf:"bytes,1,rep,name=mappings"`
 }
 
 // SMITrafficRouting configuration for TrafficSplit Custom Resource to control traffic routing
